Fixes wrapping in long names with whitespace

--- a/css/bookmark-page.css
+++ b/css/bookmark-page.css
@@ -87,6 +87,7 @@ body.is-loaded #account {
 	flex-shrink: 1;
 	overflow: hidden;
 	text-overflow: ellipsis;
+	white-space: nowrap;
 }
 #account-buttons {
 	height:100%;
